solve centering  on mobile

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  flex-grow:1;
   justify-content: space-between;
   p {
     font-size: 16px;
